# talk-booking

./: pyproject.toml
.github/workflows/: ci.yml  terraform-plan.yml
ci_cd/python/: Dockerfile
services/talk_booking/: pyproject.toml
services/talk_booking/ci_cd/python/: Dockerfile
services/talk_booking/web_app/: main.py
tests/integration/test_web_app/: test_main.py
web_app/: main.py
