[tool.poetry]
name = "talk_booking"
version = "0.1.0"
description = ""
authors = ["Prashmin Gurung <prashmingrg@gmail.com>"]
readme = ""
packages = [
    { include = "web_app", from = "." }
]


[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
httpx = ">=0.28.1,<0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
bandit = "^1.8.6"
safety = "^3.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"